Fixed layout issue in Safari desktop

--- a/css/src/columns.scss
+++ b/css/src/columns.scss
@@ -43,7 +43,6 @@
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
 
     .compact {
       width: 80%;
